--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,10 @@
     <!-- ================= DEPENDENCY MANAGEMENT ================= -->
     <dependencyManagement>
         <dependencies>
-            <!-- JUnit -->
+            <!-- JUnit - CORRECTED: Use junit:junit instead of junit:junit-dep -->
             <dependency>
                 <groupId>junit</groupId>
-                <artifactId>junit-dep</artifactId>
+                <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -80,7 +80,7 @@
     <!-- ================= REPOSITORIES ================= -->
     <repositories>
         <repository>
-            <id>sonarsource</id>
+            <id>central</id>
             <url>https://repo.maven.apache.org/maven2</url>
         </repository>
     </repositories>
